ARU-37 Added default user role on registration